--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- App Title -->
+    <title>InsightEdge | Smart Cities Career Intelligence</title>
+
+    <!-- SEO Meta -->
+    <meta
+      name="description"
+      content="InsightEdge is an AI-powered career intelligence platform helping students and professionals discover Smart Cities and Urban Development roles, identify skill gaps, and build future-ready careers."
+    />
+    <meta name="author" content="InsightEdge Team" />
+
+    <!-- Open Graph (for sharing) -->
+    <meta property="og:title" content="InsightEdge | Smart Cities Career Intelligence" />
+    <meta
+      property="og:description"
+      content="Build your career for smarter cities. Upload your resume, discover urban development roles, and get AI-powered learning roadmaps."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- You can replace this with your own image later -->
+    <meta property="og:image" content="/og-insightedge.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="InsightEdge | Smart Cities Career Intelligence" />
+    <meta
+      name="twitter:description"
+      content="AI-powered insights for Smart Cities and Urban Development careers."
+    />
+    <meta name="twitter:image" content="/og-insightedge.png" />
+
+    <!-- Optional: Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
